Made adjustments to font size, projects thumbnail gradient, and contact footer

--- a/index.html
+++ b/index.html
@@ -14,23 +14,10 @@
     Favicons
     =============================================
     -->
-  <!-- <link rel="apple-touch-icon" sizes="57x57" href="assets/images/favicons/apple-icon-57x57.png">
-  <link rel="apple-touch-icon" sizes="60x60" href="assets/images/favicons/apple-icon-60x60.png">
-  <link rel="apple-touch-icon" sizes="72x72" href="assets/images/favicons/apple-icon-72x72.png">
-  <link rel="apple-touch-icon" sizes="76x76" href="assets/images/favicons/apple-icon-76x76.png">
-  <link rel="apple-touch-icon" sizes="114x114" href="assets/images/favicons/apple-icon-114x114.png">
-  <link rel="apple-touch-icon" sizes="120x120" href="assets/images/favicons/apple-icon-120x120.png">
-  <link rel="apple-touch-icon" sizes="144x144" href="assets/images/favicons/apple-icon-144x144.png">
-  <link rel="apple-touch-icon" sizes="152x152" href="assets/images/favicons/apple-icon-152x152.png">
-  <link rel="apple-touch-icon" sizes="180x180" href="assets/images/favicons/apple-icon-180x180.png">
-  <link rel="icon" type="image/png" sizes="192x192" href="assets/images/favicons/android-icon-192x192.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicons/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="96x96" href="assets/images/favicons/favicon-96x96.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="assets/images/favicons/favicon-16x16.png"> -->
+ 
   <link rel="icon" type="image/png" sizes="16x16" href="./assets/images/personalLogo.png">
   <link rel="manifest" href="/manifest.json">
   <meta name="msapplication-TileColor" content="#ffffff">
-  <!-- <meta name="msapplication-TileImage" content="assets/images/favicons/ms-icon-144x144.png"> -->
   <meta name="theme-color" content="#ffffff">
   <!--  
     Stylesheets
@@ -133,7 +120,7 @@
             </div>
           </div>
         </div>
-        <ul class="works-grid works-grid-gut works-hover-w works-grid-3" id="works-grid">
+        <ul class="works-grid works-grid-gut works-hover-g works-grid-3" id="works-grid">
           <li class="work-item illustration webdesign"><a
               href="https://drive.google.com/file/d/12DBsDghWpV6GgA79Wj2MGJfaGMzmZUjt/view?usp=sharing" target="_blank">
               <div class="work-image"><img src="assets/images/portfolio/PackstrIcon.jpg" alt="Portfolio Item" />
@@ -239,6 +226,9 @@
           </div>
         </div>
       </section> -->
+      
+      <!-------- Contact Footer -------->
+
       <div class="module-small bg-dark">
         <div class="container">
           <div class="row">
@@ -258,7 +248,7 @@
               <div class="widget">
                 <h5 class="widget-title font-alt">Email</h5>
                 <ul class="widget-posts">
-                  <a href="#">jameshdzdesigns@gmail.com</a>
+                  <a href="#">hernandez.jimmy@gmail.com</a>
                 </ul>
               </div>
             </div>
